# wayoa

./: Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
examples/: test_client.rs
protocols/: README.xml
src/: lib.rs  main.rs
src/backend/: event_loop.rs  mod.rs
src/backend/cocoa/: app.rs  input.rs  mod.rs  view.rs  window.rs
src/compositor/: mod.rs  output.rs  state.rs  surface.rs  window.rs
src/input/: keyboard.rs  mod.rs  pointer.rs  seat.rs
src/protocol/: compositor.rs  data_device.rs  layer_shell.rs  mod.rs  output.rs  screencopy.rs  seat.rs  shell.rs  shm.rs
src/renderer/: mod.rs
src/renderer/metal/: compositor.rs  device.rs  mod.rs  pipeline.rs  texture.rs
src/renderer/shaders/: blit.metal  composite.metal
src/server/: dispatch.rs  globals.rs  mod.rs
